修改配置文件测试bug功能

--- a/order/order-dev.properties
+++ b/order/order-dev.properties
@@ -1,4 +1,4 @@
-#Ëæ»ú¶Ë¿Ú
+#ï¿½ï¿½ï¿½ï¿½Ë¿ï¿½
 #server.port=${random.int[10000,19999]}
 server.port=10010
 spring.application.name=order-service
@@ -13,18 +13,25 @@ eureka.client.lease-renewal-interval-in-seconds=30
 eureka.client.lease-expiration-durationo-in-seconds=90
 
 #ribbon
-#¿ªÆôÖØÊÔ»úÖÆ
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô»ï¿½ï¿½ï¿½
 spring.cloud.loadbalancer.retry.enabled=true
-#ÉèÖÃuser-service
-#ÇëÇóÁ´½ÓµÄ³¬Ê±Ê±¼ä
+#ï¿½ï¿½ï¿½ï¿½user-service
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÓµÄ³ï¿½Ê±Ê±ï¿½ï¿½
 user-service.ribbon.ConnectTimeout=250
-#ÇëÇó´¦ÀíµÄ³¬Ê±Ê±¼ä
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä³ï¿½Ê±Ê±ï¿½ï¿½
 user-service.ribbon.ReadTimeout=1000
-#¶ÔËùÓÐµÄÇëÇó¶¼½øÐÐÖØÊÔ
+#ï¿½ï¿½ï¿½ï¿½ï¿½Ðµï¿½ï¿½ï¿½ï¿½ó¶¼½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 user-service.ribbon.OkToReteyOnAllOperations=true
-#ÇÐ»»ÊµÀýµÄÖØÊÔ´ÎÊý
+#ï¿½Ð»ï¿½Êµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½
 user-service.ribbon.MaxAutoRetriesNextServer=2
-#¶Ôµ±Ç°ÊµÀýµÄÖØÊÔ´ÎÊý
+#ï¿½Ôµï¿½Ç°Êµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½
 user-service.ribbon.MaxAutoRetries=1
-#¶ÏÂ·Æ÷µÄ³¬Ê±Ê±¼äÐèÒª´óÓÚribbonµÄ³¬Ê±Ê±¼ä£¬²»È»²»»á´¥·¢ÖØÊÔ
+#ï¿½ï¿½Â·ï¿½ï¿½ï¿½Ä³ï¿½Ê±Ê±ï¿½ï¿½ï¿½ï¿½Òªï¿½ï¿½ï¿½ï¿½ribbonï¿½Ä³ï¿½Ê±Ê±ï¿½ä£¬ï¿½ï¿½È»ï¿½ï¿½ï¿½á´¥ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
+
+testkey=1111
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root
