--- a/order/order-dev.properties
+++ b/order/order-dev.properties
@@ -35,3 +35,4 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=root
 spring.rabbitmq.password=root
+spring.rabbitmq.dynamic=true
