--- a/order/order-dev.properties
+++ b/order/order-dev.properties
@@ -35,4 +35,6 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=root
 spring.rabbitmq.password=root
-spring.rabbitmq.dynamic=true
+spring.cloud.stream.bindings.springCloudBusInput.destination=testExchange
+spring.cloud.stream.bindings.springCloudBusInput.group=testQueue
+
