修改配置文件测试bug功能

--- a/order/order-dev.properties
+++ b/order/order-dev.properties
@@ -2,12 +2,11 @@
 #server.port=${random.int[10000,19999]}
 server.port=8001
 spring.application.name=order-service
-management.context-path=/admin
+#management.context-path=/admin
 #eureka
-eureka.instance.instanceId=${spring.application.name}:${server.port}
 eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka
-eureka.instance.statusPageUrlPath=${management.context-path}/info
-eureka.instance.healthCheckUrlPath=${management.context-path}/health
+#eureka.instance.statusPageUrlPath=${management.context-path}/info
+#eureka.instance.healthCheckUrlPath=${management.context-path}/health
 eureka.client.healthcheck.enabled=true
 eureka.client.lease-renewal-interval-in-seconds=30
 eureka.client.lease-expiration-durationo-in-seconds=90
