修改配置文件测试bug功能

--- a/order/order-dev.properties
+++ b/order/order-dev.properties
@@ -35,6 +35,11 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=root
 spring.rabbitmq.password=root
 
+
+config-repo=order
+config-server-eureka=config-server
+config-client-eureka=order
+
 spring.cloud.stream.bindings.springCloudBusInput.destination=testExchange
 spring.cloud.stream.bindings.springCloudBusInput.group=testQueue
 
