修改配置文件测试bug功能

--- a/order/order-dev.properties
+++ b/order/order-dev.properties
@@ -1,7 +1,7 @@
 #随机端口
 #server.port=${random.int[10000,19999]}
 server.port=8001
-spring.application.name=order-service
+spring.application.name=order
 #management.context-path=/admin
 #eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka
@@ -42,4 +42,6 @@ config-client-eureka=order
 
 spring.cloud.stream.bindings.springCloudBusInput.destination=testExchange
 spring.cloud.stream.bindings.springCloudBusInput.group=testQueue
+
+management.security.enabled=false
 
